--- a/app/blog/posts/boardash.mdx
+++ b/app/blog/posts/boardash.mdx
@@ -13,7 +13,7 @@ I worked together with Hubert and Boris, here are their GitHub profiles:
 - Boris: https://github.com/radx98
 - Hubert: https://github.com/hleo1
 
-Hubert led art direction, Boris handled combat, and I worked on game systems and integrated our work.
+I worked on game systems and integrating our different work streams, Hubert led art direction, and Boris handled combat.
 
 ## What's the game about?
 
