--- a/app/blog/posts/boardash.mdx
+++ b/app/blog/posts/boardash.mdx
@@ -6,12 +6,12 @@ summary: 'Building a Medieval Doordash Simulator with the team'
 
 ## This week, I worked together with a team to build the game BoarDash.
 
-The game is hosted here: https://boar-dash.vercel.app/  
-Here is the GitHub repository: https://github.com/isaacrestrick/BoarDash
+The game is hosted here: [https://boar-dash.vercel.app/](https://boar-dash.vercel.app/)  
+Here is the GitHub repository: [https://github.com/isaacrestrick/BoarDash](https://github.com/isaacrestrick/BoarDash)
 
 I worked together with Hubert and Boris, here are their GitHub profiles:
-- Boris: https://github.com/radx98
-- Hubert: https://github.com/hleo1
+- Boris: [https://github.com/radx98](https://github.com/radx98)
+- Hubert: [https://github.com/hleo1](https://github.com/hleo1)
 
 I worked on game systems and integrating our different work streams, Hubert led art direction, and Boris handled combat.
 
