--- a/app/blog/posts/boardash.mdx
+++ b/app/blog/posts/boardash.mdx
@@ -13,7 +13,7 @@ I worked together with Hubert and Boris, here are their GitHub profiles:
 - Boris: [https://github.com/radx98](https://github.com/radx98)
 - Hubert: [https://github.com/hleo1](https://github.com/hleo1)
 
-Boris handled combat, Hubert led art direction, and I worked on game systems and integrating our different work streams.
+Boris handled combat, Hubert led art direction, and I worked on game systems and integrating our work.
 
 ## What's the game about?
 
