Add Google Slides link to transformer inference post

--- a/app/blog/posts/transformer-inference.mdx
+++ b/app/blog/posts/transformer-inference.mdx
@@ -8,6 +8,8 @@ summary: 'A presentation on transformer inference techniques and optimizations'
 
 This presentation covers various aspects of transformer inference, including optimization techniques, performance considerations, and practical implementations.
 
+[View the original presentation on Google Slides](https://docs.google.com/presentation/d/1FWnZfSzbafqzQA7rhInfoKqQHk9-yjE7NQXrOk04QhY/edit?usp=sharing)
+
 ![Slide 1](/blog/images/transformer-inference/slide_01.png)
 
 ![Slide 2](/blog/images/transformer-inference/slide_02.png)
